# SteelStructFasteners-database

./: CMakeLists.txt  ReadMe.txt  dataset.json
include/: fasteners.h  mainwindow.h
src/: fasteners.cpp  fastenerscollector.cpp  fastenerscollector.h  main.cpp  mainwindow.cpp  mainwindow.ui
tests/: CMakeLists.txt  ReadMe.txt  Test.cpp
